--- a/assets/main.css
+++ b/assets/main.css
@@ -1,17 +1,8 @@
-/*!
- * Milligram v1.3.0
- * https://milligram.github.io
- *
- * Copyright (c) 2017 CJ Patoilo
- * Licensed under the MIT license
- */
+*{
+    margin: 0;
+    padding: 0;
+}
 
- *,
- *:after,
- *:before {
-     box-sizing: inherit;
- }
- 
  html {
      box-sizing: border-box;
      font-size: 62.5%;
@@ -168,7 +159,7 @@
  input[type='reset'].button-clear[disabled]:hover,
  input[type='submit'].button-clear[disabled]:focus,
  input[type='submit'].button-clear[disabled]:hover {
-     color: #9b4dca;
+     color: #830D09;
  }
  
  code {
@@ -233,7 +224,6 @@
      border-color: #830D09;
      outline: 0;
  }
- 
 
  
  textarea {
@@ -279,162 +269,8 @@
      width: 100%;
  }
  
- .row.row-no-padding {
-     padding: 0;
- }
- 
- .row.row-no-padding > .column {
-     padding: 0;
- }
- 
- .row.row-wrap {
-     flex-wrap: wrap;
- }
- 
- .row.row-top {
-     align-items: flex-start;
- }
- 
- .row.row-bottom {
-     align-items: flex-end;
- }
- 
- .row.row-center {
-     align-items: center;
- }
- 
- .row.row-stretch {
-     align-items: stretch;
- }
- 
- .row.row-baseline {
-     align-items: baseline;
- }
- 
- .row .column {
-     display: block;
-     flex: 1 1 auto;
-     margin-left: 0;
-     max-width: 100%;
-     width: 100%;
- }
- 
- .row .column.column-offset-10 {
-     margin-left: 10%;
- }
- 
- .row .column.column-offset-20 {
-     margin-left: 20%;
- }
- 
- .row .column.column-offset-25 {
-     margin-left: 25%;
- }
- 
- .row .column.column-offset-33, .row .column.column-offset-34 {
-     margin-left: 33.3333%;
- }
- 
- .row .column.column-offset-50 {
-     margin-left: 50%;
- }
- 
- .row .column.column-offset-66, .row .column.column-offset-67 {
-     margin-left: 66.6666%;
- }
- 
- .row .column.column-offset-75 {
-     margin-left: 75%;
- }
- 
- .row .column.column-offset-80 {
-     margin-left: 80%;
- }
- 
- .row .column.column-offset-90 {
-     margin-left: 90%;
- }
- 
- .row .column.column-10 {
-     flex: 0 0 10%;
-     max-width: 10%;
- }
- 
- .row .column.column-20 {
-     flex: 0 0 20%;
-     max-width: 20%;
- }
- 
- .row .column.column-25 {
-     flex: 0 0 25%;
-     max-width: 25%;
- }
- 
- .row .column.column-33, .row .column.column-34 {
-     flex: 0 0 33.3333%;
-     max-width: 33.3333%;
- }
- 
- .row .column.column-40 {
-     flex: 0 0 40%;
-     max-width: 40%;
- }
- 
- .row .column.column-50 {
-     flex: 0 0 50%;
-     max-width: 50%;
- }
- 
- .row .column.column-60 {
-     flex: 0 0 60%;
-     max-width: 60%;
- }
- 
- .row .column.column-66, .row .column.column-67 {
-     flex: 0 0 66.6666%;
-     max-width: 66.6666%;
- }
- 
- .row .column.column-75 {
-     flex: 0 0 75%;
-     max-width: 75%;
- }
- 
- .row .column.column-80 {
-     flex: 0 0 80%;
-     max-width: 80%;
- }
- 
- .row .column.column-90 {
-     flex: 0 0 90%;
-     max-width: 90%;
- }
- 
- .row .column .column-top {
-     align-self: flex-start;
- }
- 
- .row .column .column-bottom {
-     align-self: flex-end;
- }
- 
- .row .column .column-center {
-     -ms-grid-row-align: center;
-     align-self: center;
- }
- 
- @media (min-width: 40rem) {
-     .row {
-         flex-direction: row;
-         margin-left: -1.0rem;
-         width: calc(100% + 2.0rem);
-     }
-     .row .column {
-         margin-bottom: inherit;
-         padding: 0 1.0rem;
-     }
- }
- 
+
+
  a {
      color: #830D09;
      text-decoration: none;
@@ -579,22 +415,9 @@
  img {
      max-width: 100%;
  }
- 
- .clearfix:after {
-     clear: both;
-     content: ' ';
-     display: table;
- }
- 
- .float-left {
-     float: left;
- }
- 
- .float-right {
-     float: right;
- }
- 
- nav#site-navigation {
+
+
+nav#site-navigation {
      text-align: center;
      margin-bottom: 3rem;
  
@@ -649,7 +472,7 @@
  
  #footer {
      background:#333;
-     padding:3rem;
+
      width:100%;
  }
  
@@ -687,9 +510,6 @@
      margin-bottom:1rem;
      color:white;
  }
- 
- textarea {
-     width:100% !important;
-     height:150px;
- }
+
+
  
