--- a/assets/main.css
+++ b/assets/main.css
@@ -463,53 +463,53 @@ nav#site-navigation {
      margin-left:0;
  }
  
- #content {
+#content {
      width:70%;
      margin:0 auto;
      padding-top:1rem;
      padding-bottom:1rem;
- }
+}
  
- #footer {
-     background:#333;
-
-     width:100%;
- }
+#footer {
+    background:#333;
+    padding: 3rem 0;
+    width:100%;
+}
  
- #inner-footer {
+#inner-footer {
      width:80%;
      margin:0 auto;
      color:white;
- }
+}
  
- .posts article.post {
+.posts article.post {
      padding-bottom: 3rem;
      margin-bottom:3rem;
      border-bottom:1px solid lightgray;
- }
+}
  
- .posts article.post:last-child {
+.posts article.post:last-child {
      border-bottom:none;
- }
+}
  
- .posts article footer {
+.posts article footer {
      margin-top: 1.5rem;
      font-style: italic;
- }
+}
  
- .error {
-     background: #ff6b6b;
-     padding:1.5rem;
-     margin-bottom:1rem;
-     color:white;
- }
+.error {
+    background: #ff6b6b;
+    padding:1.5rem;
+    margin-bottom:1rem;
+    color:white;
+}
  
- .success {
-     background: #55bf35;
-     padding:1.5rem;
-     margin-bottom:1rem;
-     color:white;
- }
+.success {
+    background: #55bf35;
+    padding:1.5rem;
+    margin-bottom:1rem;
+    color:white;
+}
 
 
  
